issue fix spacing

--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -132,6 +132,10 @@ a.effect-shine:hover {
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
+
+.p-b-0{
+  padding: 0 !important;
+}
 // ===============================================================================
 // ============================== Mega text ======================================
 // ===============================================================================
