--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10975,6 +10975,10 @@ a.effect-shine:hover {
   margin-right: 0 !important;
 }
 
+.p-b-0 {
+  padding: 0 !important;
+}
+
 .title .mega-font {
   font-family: "Circular Std";
   font-style: normal;
@@ -11772,8 +11776,7 @@ li {
   transition: -webkit-transform 0.5s, -webkit-transform-origin 0s;
   transition: transform 0.5s, transform-origin 0s;
   transition: transform 0.5s, transform-origin 0s, -webkit-transform 0.5s, -webkit-transform-origin 0s;
-  transition: transform 0.5s, transform-origin 0s, -webkit-transform 0.5s,
- -webkit-transform-origin 0s;
+  transition: transform 0.5s, transform-origin 0s, -webkit-transform 0.5s, -webkit-transform-origin 0s;
 }
 
 .menu ul li a:hover {
@@ -14026,8 +14029,7 @@ em {
   transition: -webkit-transform 0.5s, -webkit-transform-origin 0s;
   transition: transform 0.5s, transform-origin 0s;
   transition: transform 0.5s, transform-origin 0s, -webkit-transform 0.5s, -webkit-transform-origin 0s;
-  transition: transform 0.5s, transform-origin 0s, -webkit-transform 0.5s,
- -webkit-transform-origin 0s;
+  transition: transform 0.5s, transform-origin 0s, -webkit-transform 0.5s, -webkit-transform-origin 0s;
 }
 
 @media (min-width: 768px) {
@@ -15525,8 +15527,7 @@ em {
   transition: opacity 0.1s, -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, opacity 0.1s;
   transition: transform 0.3s ease-in-out, opacity 0.1s, -webkit-transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, opacity 0.1s,
- -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, opacity 0.1s, -webkit-transform 0.3s ease-in-out;
 }
 
 .ze-cursor-text {
@@ -16377,8 +16378,7 @@ em {
 @media (min-width: 1200px) {
   .ze-hero-nav-item a {
     color: #fff;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
- 1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     font-size: 6.66667vw;
     line-height: 1.1;
     transition: color 0.3s, -webkit-text-stroke 0.3s;
@@ -16558,8 +16558,7 @@ em {
 .ze-featured-header h2 span {
   display: block;
   color: #fff;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
- 1px 1px 0 #000;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 @supports (-webkit-text-stroke: 1px #01d7fd) {
@@ -19646,8 +19645,7 @@ a.ze-splitshow-item:hover .ze-splitshow-item-img span {
 .ze-advantage-item-num {
   margin: 0 0 20px 0;
   color: #fff;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
- 1px 1px 0 #000;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   font-size: 80px;
   font-weight: 600;
   line-height: 90%;
@@ -20048,8 +20046,7 @@ a.ze-splitshow-item:hover .ze-splitshow-item-img span {
     display: inline-block;
     width: 50vw;
     padding: 0 5vw;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
- 1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     font-size: 6.66667vw;
     white-space: normal;
     text-align: left;
